--- a/cp4/index.html
+++ b/cp4/index.html
@@ -30,6 +30,14 @@
         });
     });
 </script>
+<style>
+.panel-body {
+   max-height: 55%;
+   min-height: 55%;
+   overflow-y: scroll;
+}
+</style>
+
 </head>
 
 <body>
