--- a/cp4/index.html
+++ b/cp4/index.html
@@ -104,7 +104,7 @@
         <h1 style="color:white;">Welcome to Debate Box</h1>
 
         <h4 id="topic" style="color:white;">Topic: </h4>
-        <p style="color:#3894d1">Topics change every minute and a half.</p>
+        <p style="color:#3894d1">Topics change every 3 minutes.</p>
         <div class="row">
             <div class="col-sm-6">
                 <div class="panel panel-default text-center" style="border: 1px solid #43d643 !important;">
